src/test/fun-test/parser/Wrong11.java.err
Parsing error: ';' after declaration expected, got: 'f' at line 3, pos 14
