src/test/fun-test/parser/Wrong11.java
class Main {
    void main() {
        dabl f = 1.E1;
    }
}